--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
+    "homepage": "https://lromero1500.github.io/testeado/",
     "name": "testeando-app",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@greatsumini/react-facebook-login": "^2.1.3",
         "@testing-library/jest-dom": "^5.15.0",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "axios": "^0.24.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-facebook-login": "^4.1.1",
         "react-google-login": "^5.2.2",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
-
-        "start": "set HTTPS=true&&set SSL_CRT_FILE=./.cert/cert.pem&&set SSL_KEY_FILE=./.cert/key.pem&&react-scripts start",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
+        "start": "set HTTPS=true&&react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
@@ -39,5 +42,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^3.2.3"
     }
 }
