--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-    "homepage": "https://lromero1500.github.io/testeado/",
-    "name": "testeando-app",
+    "name": "blog",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@greatsumini/react-facebook-login": "^2.1.3",
         "@testing-library/jest-dom": "^5.15.0",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.24.0",
+        "moment": "^2.29.1",
+        "moment-timezone": "^0.5.33",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-facebook-login": "^4.1.1",
         "react-google-login": "^5.2.2",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
-        "web-vitals": "^1.1.2"
+        "web-vitals": "^1.1.2",
+        "webfontloader": "^1.6.28"
     },
     "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
         "start": "set HTTPS=true&&react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -42,8 +42,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "gh-pages": "^3.2.3"
     }
 }
